fix wrong background on buttons

--- a/bootstrap.css
+++ b/bootstrap.css
@@ -217,7 +217,7 @@ textarea {
   margin-left: 20px;
 }
 
-/* line 129, /Users/alex/Sites/bootstrap/lib/_mixins.scss */
+/* line 130, /Users/alex/Sites/bootstrap/lib/_mixins.scss */
 .reset-filter, .btn.disabled, .btn[disabled], .alert-message.block-message {
   filter: "progid:DXImageTransform.Microsoft.gradient(enabled = false)";
 }
@@ -1896,6 +1896,7 @@ table .headerSortDown.purple {
   background-image: -o-linear-gradient(#292929, #191919);
   background-image: -ms-linear-gradient(#292929, #191919);
   background-image: linear-gradient(#292929, #191919);
+  background-color: #191919;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   border-color: #191919 #191919 black;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) fadein(rgba(0, 0, 0, 0.1), 15%);
@@ -2276,6 +2277,7 @@ footer {
   background-image: -o-linear-gradient(#ee5f5b, #c43c35);
   background-image: -ms-linear-gradient(#ee5f5b, #c43c35);
   background-image: linear-gradient(#ee5f5b, #c43c35);
+  background-color: #c43c35;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   border-color: #c43c35 #c43c35 #882a25;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) fadein(rgba(0, 0, 0, 0.1), 15%);
@@ -2289,6 +2291,7 @@ footer {
   background-image: -o-linear-gradient(#62c462, #57a957);
   background-image: -ms-linear-gradient(#62c462, #57a957);
   background-image: linear-gradient(#62c462, #57a957);
+  background-color: #57a957;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   border-color: #57a957 #57a957 #3d773d;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) fadein(rgba(0, 0, 0, 0.1), 15%);
@@ -2302,6 +2305,7 @@ footer {
   background-image: -o-linear-gradient(#5bc0de, #339bb9);
   background-image: -ms-linear-gradient(#5bc0de, #339bb9);
   background-image: linear-gradient(#5bc0de, #339bb9);
+  background-color: #339bb9;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   border-color: #339bb9 #339bb9 #22697d;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) fadein(rgba(0, 0, 0, 0.1), 15%);
@@ -2359,6 +2363,7 @@ footer {
   background-image: -o-linear-gradient(#049cdb, #0064cd);
   background-image: -ms-linear-gradient(#049cdb, #0064cd);
   background-image: linear-gradient(#049cdb, #0064cd);
+  background-color: #0064cd;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   border-color: #0064cd #0064cd #003f81;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) fadein(rgba(0, 0, 0, 0.1), 15%);
@@ -2454,6 +2459,7 @@ input[type=submit].btn::-moz-focus-inner {
   background-image: -o-linear-gradient(#fceec1, #eedc94);
   background-image: -ms-linear-gradient(#fceec1, #eedc94);
   background-image: linear-gradient(#fceec1, #eedc94);
+  background-color: #eedc94;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   border-color: #eedc94 #eedc94 #e4c652;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) fadein(rgba(0, 0, 0, 0.1), 15%);
